--- a/src/WeddingParty/styles.css
+++ b/src/WeddingParty/styles.css
@@ -3,19 +3,27 @@
   .wedding-party__couple-wrapper {
     display: flex;
     justify-content: space-evenly; }
+    @media (max-width: 768px) {
+      .wedding-party__couple-wrapper {
+        flex-wrap: wrap; } }
   .wedding-party__column {
     width: calc(50% - 45px);
     text-align: center; }
+    @media (max-width: 768px) {
+      .wedding-party__column {
+        width: 100%; }
+        .wedding-party__column:not(:last-of-type) {
+          margin-bottom: 30px; } }
   .wedding-party__spouse {
     margin-bottom: 50px; }
-    @media (max-width: 480px) {
-      .wedding-party__spouse {
-        margin-bottom: 25px; } }
   .wedding-party__spouse-image {
     height: 575px;
     width: 100%;
     margin-bottom: 15px;
     background-size: cover; }
+    @media (max-width: 480px) {
+      .wedding-party__spouse-image {
+        height: 400px; } }
   .wedding-party__spouse-name {
     font-family: 'Cookie';
     font-size: 48px;
