--- a/src/SectionWrapper/styles.css
+++ b/src/SectionWrapper/styles.css
@@ -1,5 +1,6 @@
 .section-wrapper {
-  padding: 75px 0; }
-  @media (max-width: 480px) {
+  color: #232b2b;
+  padding: 60px 0; }
+  @media (max-width: 768px) {
     .section-wrapper {
-      padding: 50px 0; } }
+      padding: 30px 0; } }
