--- a/src/WeddingDetails/styles.scss
+++ b/src/WeddingDetails/styles.scss
@@ -15,6 +15,9 @@
 
     @include tablet {
       width: 100%;
+      &:not(:last-of-type) {
+        margin-bottom: 30px;
+      }
     }
   }
 
@@ -64,8 +67,7 @@
   }
 
   &__time {
-    flex: 1 0 75px;
-    width: 20%;
+    flex: 0 0 75px;
     font-size: 24px;
   }
 
@@ -77,7 +79,7 @@
 
   &__event {
     position: relative;
-    padding: 0 0 2em 2em;
+    padding: 0 0 5em 2em;
     margin-left: 1.5em;
     border-left: 1px solid $black;
   }
