--- a/src/WeddingDetails/styles.css
+++ b/src/WeddingDetails/styles.css
@@ -74,7 +74,7 @@
     content: ' ';
     width: 10px;
     height: 10px;
-    background-color: #e0b0ff;
+    background-color: #cec1e7;
     border-radius: 50%; }
 
 .wedding-details__event-details {
