--- a/src/WeddingParty/styles.scss
+++ b/src/WeddingParty/styles.scss
@@ -82,7 +82,7 @@
   }
 
   &__member-role {
-    color: #e0b0ff;
+    color: $accent;
     font-size: 13px;
     letter-spacing: 3px;
     text-transform: uppercase;
