--- a/src/Registry/styles.css
+++ b/src/Registry/styles.css
@@ -13,9 +13,13 @@
       margin: 30px; } }
 
 .registry svg {
-  width: 200px; }
+  width: 200px;
+  margin: 1em; }
+  @media (max-width: 480px) {
+    .registry svg {
+      margin: 3em 1em 0; } }
   .registry svg path {
     fill: #999;
     transition: .2s all ease; }
   .registry svg:hover path {
-    fill: #e0b0ff; }
+    fill: #cec1e7; }
