--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: 'Montserrat', Arial, sans-serif;
   color: #232b2b;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, p {
