--- a/src/Countdown/styles.scss
+++ b/src/Countdown/styles.scss
@@ -33,6 +33,12 @@
     text-transform: uppercase;
   }
 
+  &__datetime {
+    @include phone {
+      font-size: 1.7em;
+    }
+  }
+
   &__time-wrapper {
     display: flex;
     justify-content: space-between;
@@ -42,6 +48,10 @@
     @include tablet {
       flex-direction: column;
       text-align: right;
+    }
+
+    @include phone {
+      margin-top: 1em;
     }
   }
 
