--- a/src/Registry/styles.css
+++ b/src/Registry/styles.css
@@ -17,7 +17,7 @@
   margin: 1em; }
   @media (max-width: 480px) {
     .registry svg {
-      margin: 3em 1em 0; } }
+      margin: 1.5em 0; } }
   .registry svg path {
     fill: #999;
     transition: .2s all ease; }
