a lot of changes

--- a/src/Countdown/styles.css
+++ b/src/Countdown/styles.css
@@ -1,6 +1,6 @@
 .countdown {
   color: #fcfcfc;
-  background-color: #cec1e7; }
+  background-color: #ce9c9c; }
   .countdown__heading {
     display: block;
     font-family: 'Cookie';
