--- a/src/ReadingWell/styles.css
+++ b/src/ReadingWell/styles.css
@@ -1,7 +1,3 @@
 .reading-well {
   max-width: 1170px;
-  margin: 0 auto;
-  padding: 0 30px; }
-  @media (max-width: 480px) {
-    .reading-well {
-      padding: 0 15px; } }
+  margin: 0 auto; }
