--- a/src/shared/_mixins.scss
+++ b/src/shared/_mixins.scss
@@ -1,11 +1,6 @@
 @mixin readingWell() {
   max-width: 1170px;
   margin: 0 auto;
-  padding: 0 30px;
-
-  @include phone {
-    padding: 0 15px;
-  }
 }
 
 // Screen size variables
@@ -18,4 +13,4 @@ $screen-xl-min: 1170px; // Large tablets and desktops
 @mixin phone { @media (max-width: #{$screen-xs-min}) {@content;} }
 @mixin tablet { @media (max-width: #{$screen-md-min}) {@content;} }
 @mixin desktop { @media (max-width: #{$screen-lg-min}) {@content;} }
-@mixin largeDesktop { @media (min-width: #{$screen-xl-min}) {@content;} }
+@mixin largeDesktop { @media (max-width: #{$screen-xl-min}) {@content;} }
