--- a/src/Registry/styles.css
+++ b/src/Registry/styles.css
@@ -1,25 +1,25 @@
-.registry__svg-wrapper {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-top: 2em; }
-
-.registry__logo {
-  width: 200px;
-  margin: 15px; }
-  @media (max-width: 480px) {
-    .registry__logo {
-      margin: 30px; } }
-
-.registry svg {
-  width: 200px;
-  margin: 1em; }
-  @media (max-width: 480px) {
-    .registry svg {
-      margin: 1.5em 0; } }
-  .registry svg path {
-    fill: #999;
-    transition: .2s all ease; }
-  .registry svg:hover path {
-    fill: #cec1e7; }
+.registry {
+  background-color: #f0f0f0; }
+  .registry__svg-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 2em; }
+  .registry__logo {
+    width: 200px;
+    margin: 15px; }
+    @media (max-width: 480px) {
+      .registry__logo {
+        margin: 30px; } }
+  .registry svg {
+    width: 200px;
+    margin: 1em; }
+    @media (max-width: 480px) {
+      .registry svg {
+        margin: 1.5em 0; } }
+    .registry svg path {
+      fill: #999;
+      transition: .2s all ease; }
+    .registry svg:hover path {
+      fill: #ce9c9c; }
