--- a/src/SectionWrapper/styles.scss
+++ b/src/SectionWrapper/styles.scss
@@ -3,10 +3,9 @@
 
 .section-wrapper {
   color: $black;
-  padding: 60px 0;
-
+  padding: 60px 30px;
 
   @include tablet {
-    padding: 30px 0;
+    padding: 30px 15px;
   }
 }
