--- a/src/WeddingDetails/styles.css
+++ b/src/WeddingDetails/styles.css
@@ -21,9 +21,6 @@
       text-align: center; } }
 
 .wedding-details__venue-name {
-  text-transform: uppercase; }
-
-.wedding-details__venue-name {
   margin-bottom: 5px;
   text-transform: uppercase;
   font-weight: 600;
@@ -34,15 +31,24 @@
   font-size: 16px;
   margin-bottom: 5px; }
 
+.wedding-details__link {
+  color: #232b2b;
+  text-decoration: none; }
+  .wedding-details__link:hover {
+    text-decoration: underline; }
+
 .wedding-details__venue-image {
-  width: 100%; }
+  width: 100%;
+  box-shadow: 0 2px 20px rgba(150, 150, 150, 0.45); }
 
 .wedding-details__credit {
   font-size: 11px;
   display: block;
   line-height: 11px;
-  text-decoration: none;
-  color: #232b2b; }
+  color: #232b2b;
+  text-decoration: none; }
+  .wedding-details__credit:hover {
+    text-decoration: underline; }
 
 .wedding-details__event-wrapper {
   display: flex; }
@@ -74,7 +80,7 @@
     content: ' ';
     width: 10px;
     height: 10px;
-    background-color: #cec1e7;
+    background-color: #ce9c9c;
     border-radius: 50%; }
 
 .wedding-details__event-details {
