--- a/src/WeddingDetails/styles.scss
+++ b/src/WeddingDetails/styles.scss
@@ -31,10 +31,6 @@
   }
 
   &__venue-name {
-    text-transform: uppercase;
-  }
-
-  &__venue-name {
     margin-bottom: 5px;
     text-transform: uppercase;
     font-weight: 600;
@@ -47,16 +43,30 @@
     margin-bottom: 5px;
   }
 
+  &__link {
+    color: $black;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   &__venue-image {
     width: 100%;
+    box-shadow: 0 2px 20px rgba(150, 150, 150, 0.45);
   }
 
   &__credit {
     font-size: 11px;
     display: block;
     line-height: 11px;
-    text-decoration: none;
     color: $black;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__timeline {
