--- a/src/LoginScreen/styles.css
+++ b/src/LoginScreen/styles.css
@@ -4,12 +4,11 @@
   bottom: 0;
   left: 0;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #ce9c9c; }
   .login-screen__field-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center; }
   .login-screen__field-label {
     font-size: 1.75em;
@@ -17,15 +16,37 @@
     color: #fcfcfc;
     letter-spacing: 5px;
     text-transform: uppercase; }
+  .login-screen__field {
+    position: relative;
+    widtH: 320px;
+    margin: 0 auto; }
   .login-screen__field-input {
     display: block;
     height: 36px;
     width: 100%;
     margin: 15px auto 0;
-    padding: 0 10px;
+    padding: 0px 50px 0 10px;
     border: none;
     outline: none;
-    font-size: 16px; }
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 1px; }
+    .login-screen__field-input--error {
+      box-shadow: 0px 0px 3px 1px red; }
+  .login-screen__field-toggle {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px; }
+    .login-screen__field-toggle:hover {
+      cursor: pointer; }
   .login-screen__submit {
     box-sizing: content-box;
     margin-top: 20px;
@@ -33,6 +54,7 @@
     background-color: #ce9c9c;
     border: 1px solid #fcfcfc;
     border-radius: 3px;
+    outline: none;
     color: #fcfcfc;
     font-size: 1em;
     font-weight: 300;
@@ -43,3 +65,7 @@
       cursor: pointer;
       background-color: #fcfcfc;
       color: #ce9c9c; }
+  .login-screen__error {
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 1px; }
