--- a/src/Hero/styles.css
+++ b/src/Hero/styles.css
@@ -1,29 +1,29 @@
 .hero {
   height: 100vh;
   background-attachment: fixed;
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
   background-size: cover; }
+  @media (max-width: 768px) {
+    .hero {
+      background-position: center; } }
   @media (max-width: 480px) {
     .hero {
       background-attachment: initial; } }
   .hero__reading-well {
-    max-width: 1170px;
-    margin: 0 auto;
     height: 100%;
     position: relative; }
   .hero__headline {
     position: absolute;
-    top: 50%;
+    bottom: 0;
     left: 0;
     right: 0;
-    transform: translateY(-50%);
     padding: inherit;
     font-family: 'Cookie';
     font-size: 12em;
     font-weight: 400;
     line-height: 1;
-    color: #fcfcfc; }
+    color: #ce9c9c; }
     @media (max-width: 768px) {
       .hero__headline {
         font-size: 7em; } }
