--- a/src/PhotoSideBySide/styles.css
+++ b/src/PhotoSideBySide/styles.css
@@ -1,28 +1,30 @@
-.photo-side-by-side__wrapper {
-  display: flex;
-  justify-content: space-evenly; }
-  @media (max-width: 1170px) {
-    .photo-side-by-side__wrapper {
-      justify-content: space-between; } }
-  @media (max-width: 768px) {
-    .photo-side-by-side__wrapper {
-      flex-wrap: wrap; } }
-
-.photo-side-by-side__column {
-  width: calc(50% - 45px);
-  text-align: center; }
-  @media (max-width: 1170px) {
-    .photo-side-by-side__column {
-      width: calc(50% - 15px); } }
-  @media (max-width: 768px) {
-    .photo-side-by-side__column {
-      width: 100%; }
-      .photo-side-by-side__column:not(:last-of-type) {
-        margin-bottom: 30px; } }
-
-.photo-side-by-side__photo {
-  width: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  box-shadow: 0 2px 20px rgba(150, 150, 150, 0.45); }
+.photo-side-by-side {
+  margin: 0 auto;
+  max-width: 1280px; }
+  .photo-side-by-side--portrait .photo-side-by-side__wrapper {
+    justify-content: space-evenly; }
+  .photo-side-by-side--portrait .photo-side-by-side__column {
+    width: calc(50% - 100px); }
+  .photo-side-by-side--portrait .photo-side-by-side__photo {
+    height: 600px; }
+  .photo-side-by-side__wrapper {
+    display: flex;
+    justify-content: space-between; }
+    @media (max-width: 768px) {
+      .photo-side-by-side__wrapper {
+        flex-wrap: wrap; } }
+  .photo-side-by-side__column {
+    width: calc(50% - 15px);
+    text-align: center; }
+    @media (max-width: 768px) {
+      .photo-side-by-side__column {
+        width: 100%; }
+        .photo-side-by-side__column:not(:last-of-type) {
+          margin-bottom: 30px; } }
+  .photo-side-by-side__photo {
+    height: 360px;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0 2px 20px rgba(150, 150, 150, 0.45); }
