--- a/src/PhotoSideBySide/styles.scss
+++ b/src/PhotoSideBySide/styles.scss
@@ -2,14 +2,27 @@
 @import 'shared/_colors.scss';
 
 .photo-side-by-side {
+  margin: 0 auto;
+  max-width: 1280px;
+
+  &--portrait {
+
+    .photo-side-by-side__wrapper {
+      justify-content: space-evenly;
+    }
+
+    .photo-side-by-side__column {
+      width: calc(50% - 100px);
+    }
+
+    .photo-side-by-side__photo {
+      height: 600px;
+    }
+  }
 
   &__wrapper {
     display: flex;
-    justify-content: space-evenly;
-
-    @include largeDesktop {
-      justify-content: space-between;
-    }
+    justify-content: space-between;
 
     @include tablet {
       flex-wrap: wrap;
@@ -17,12 +30,8 @@
   }
 
   &__column {
-    width: calc(50% - 45px);
+    width: calc(50% - 15px);
     text-align: center;
-
-    @include largeDesktop {
-      width: calc(50% - 15px);
-    }
 
     @include tablet {
       width: 100%;
@@ -33,6 +42,7 @@
   }
 
   &__photo {
+    height: 360px;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
