fix portrait image responsiveness and test mobile header text

--- a/src/Hero/styles.scss
+++ b/src/Hero/styles.scss
@@ -39,8 +39,8 @@
 
     @include phone {
       transform: none;
-      top: initial;
-      bottom: 60px;
+      top: 0;
+      font-size: 6em;
     }
 
     .italics {
