--- a/src/Hero/styles.css
+++ b/src/Hero/styles.css
@@ -30,8 +30,8 @@
     @media (max-width: 480px) {
       .hero__headline {
         transform: none;
-        top: initial;
-        bottom: 60px; } }
+        top: 0;
+        font-size: 6em; } }
     .hero__headline .italics {
       font-style: italic; }
     .hero__headline span {
