--- a/src/Hero/styles.scss
+++ b/src/Hero/styles.scss
@@ -39,8 +39,11 @@
 
     @include phone {
       transform: none;
-      top: 0;
-      font-size: 6em;
+      top: initial;
+      bottom: 0;
+      font-size: 5.5em;
+      text-align: center;
+      height: 100%;
     }
 
     .italics {
