--- a/src/Hero/styles.scss
+++ b/src/Hero/styles.scss
@@ -23,7 +23,6 @@
 
   &__headline {
     position: absolute;
-    bottom: 0;
     left: 0;
     right: 0;
     padding: inherit;
@@ -35,15 +34,14 @@
 
     @include tablet {
       font-size: 7em;
+      bottom: 0;
+      text-shadow: 1px 1px 0 #e1c3c3;
     }
 
     @include phone {
-      transform: none;
-      top: initial;
-      bottom: 0;
+      top: 40%;
       font-size: 5.5em;
       text-align: center;
-      height: 100%;
     }
 
     .italics {
