--- a/src/Hero/styles.css
+++ b/src/Hero/styles.css
@@ -15,8 +15,10 @@
     position: relative; }
   .hero__headline {
     position: absolute;
+    top: 50%;
     left: 0;
     right: 0;
+    transform: translateY(-50%);
     padding: inherit;
     font-family: 'Cookie';
     font-size: 12em;
