--- a/src/PhotoSideBySide/styles.css
+++ b/src/PhotoSideBySide/styles.css
@@ -4,7 +4,10 @@
   .photo-side-by-side--portrait .photo-side-by-side__wrapper {
     justify-content: space-evenly; }
   .photo-side-by-side--portrait .photo-side-by-side__column {
-    width: calc(50% - 50px); }
+    width: calc(50% - 100px); }
+    @media (max-width: 992px) {
+      .photo-side-by-side--portrait .photo-side-by-side__column {
+        width: calc(50% - 50px); } }
     @media (max-width: 768px) {
       .photo-side-by-side--portrait .photo-side-by-side__column {
         width: 80%;
