try switching out hero image

--- a/src/Hero/styles.css
+++ b/src/Hero/styles.css
@@ -1,15 +1,15 @@
 .hero {
   height: 100vh;
   background-attachment: fixed;
-  background-position: left;
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  background-position: 60% bottom; }
   @media (max-width: 768px) {
     .hero {
-      background-position: center; } }
+      background-position: 65% bottom; } }
   @media (max-width: 480px) {
     .hero {
-      background-attachment: initial; } }
+      background-position: 73% bottom; } }
   .hero__reading-well {
     height: 100%;
     position: relative; }
@@ -32,7 +32,7 @@
         text-shadow: 1px 1px 0 #e1c3c3; } }
     @media (max-width: 480px) {
       .hero__headline {
-        top: 40%;
+        top: 30%;
         font-size: 5.5em;
         text-align: center; } }
     .hero__headline .italics {
