--- a/src/Hero/styles.css
+++ b/src/Hero/styles.css
@@ -3,39 +3,38 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 60% bottom; }
-  @media (max-width: 768px) {
+  background-position: center bottom; }
+  @media (max-width: 992px) {
     .hero {
       background-attachment: initial;
-      background-position: 65% bottom; } }
+      background-position: 30% bottom; } }
   @media (max-width: 480px) {
     .hero {
-      background-position: 73% bottom; } }
+      background-position: 33% bottom; } }
   .hero__reading-well {
     height: 100%;
     position: relative; }
   .hero__headline {
     position: absolute;
-    top: 50%;
-    left: 0;
+    bottom: 0;
     right: 0;
-    transform: translateY(-50%);
     padding: inherit;
     font-family: 'Cookie';
     font-size: 12em;
     font-weight: 400;
     line-height: 1;
-    color: #ce9c9c; }
-    @media (max-width: 768px) {
+    color: #ce9c9c;
+    text-align: right;
+    text-shadow: 1px 1px 0 #e1c3c3; }
+    @media (max-width: 992px) {
       .hero__headline {
-        font-size: 7em;
-        bottom: 0;
-        text-shadow: 1px 1px 0 #e1c3c3; } }
+        font-size: 10em; } }
     @media (max-width: 480px) {
       .hero__headline {
-        top: 30%;
-        font-size: 5.5em;
-        text-align: center; } }
+        bottom: 7%;
+        left: 0;
+        font-size: 6em;
+        text-align: left; } }
     .hero__headline .italics {
       font-style: italic; }
     .hero__headline span {
