--- a/src/Hero/styles.scss
+++ b/src/Hero/styles.scss
@@ -6,15 +6,15 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 60% bottom;
+  background-position: center bottom;
 
-  @include tablet {
+  @include desktop {
     background-attachment: initial;
-    background-position: 65% bottom;
+    background-position: 30% bottom;
   }
 
   @include phone {
-    background-position: 73% bottom;
+    background-position: 33% bottom;
   }
 
   &__reading-well {
@@ -24,27 +24,29 @@
 
   &__headline {
     position: absolute;
-    top: 50%;
-    left: 0;
+    bottom: 0;
     right: 0;
-    transform: translateY(-50%);
     padding: inherit;
     font-family: 'Cookie';
     font-size: 12em;
     font-weight: 400;
     line-height: 1;
     color: $accent;
+    text-align: right;
+    text-shadow: 1px 1px 0 #e1c3c3;
+
+    @include desktop {
+      font-size: 10em;
+    }
 
     @include tablet {
-      font-size: 7em;
-      bottom: 0;
-      text-shadow: 1px 1px 0 #e1c3c3;
     }
 
     @include phone {
-      top: 30%;
-      font-size: 5.5em;
-      text-align: center;
+      bottom: 7%;
+      left: 0;
+      font-size: 6em;
+      text-align: left;
     }
 
     .italics {
